# xsens_reader

./: CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  package.xml  package.xml~
src/: listener.cpp~  xsens_publisher.cpp~  xsens_reader.cpp  xsens_reader.cpp~
src/xsens_reader/: MTComm.cpp  MTComm.h  cmdargsreader.cpp  cmdargsreader.cpp~  cmdargsreader.h  cmdargsreader.h~  dmatrix.hh  dmatrix.hh~  dmatrix.hxx  dmatrix.hxx~  qc_imu_messages.h  qc_imu_messages.h~  timeval_ops.c  timeval_ops.c~  timeval_ops.h  timeval_ops.h~  transformation3.hh  transformation3.hh~  transformation3.hxx  transformation3.hxx~  xsensDriver.cpp  xsensDriver.cpp~  xsensDriver.h  xsensDriver.h~
